--- a/index.html
+++ b/index.html
@@ -83,11 +83,21 @@
                             <li><a href="#">Komfortabel COFFEE<img src="./images/icon_shop_filter.png" alt="카페 상품 바로가기"></a></li>
                         </ul>
                         <div class="product_wrap">
+                            <div class="product_category">
+                                <div class="left_category">
+                                    <a href="#">All<img src="./images/icon_shop_filter.png" alt="전체 상품 보러가기"></a>
+                                </div>
+                                <div class="right_category">
+                                    <a href="#">낮은 가격 순</a>
+                                    <a href="#">높은 가격 순</a>
+                                    <a href="#" class="active_category">판매 순</a>
+                                </div>
+                            </div>
                             <div class="product_swiper swiper">
                                 <div class="swiper-wrapper">
                                     <div class="swiper-slide slide1">
                                         <div class="product">
-                                            <a href="#">
+                                            <a href="#" class="pd">
                                                 <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
                                                 <div class="product_name">
                                                     <h2>AINOA.</h2>
@@ -95,19 +105,36 @@
                                                 </div>
                                                 <p>아이노아 퍼퓸<br>130ml</p>
                                             </a>
-                                        </div>
-                                        <div class="product">
-                                            <a href="#" >
-                                            <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
-                                            <div class="product_name">
-                                                <h2>SOIE. Signature</h2>
-                                                <p>110,000 KRW</p>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. GrapeFruit, Orange</p>
+                                                <p>M. Jasmine, Magnolia, Neroli</p>
+                                                <p>B. Musk, Amber, Patchouli, Sandalwood</p>
                                             </div>
-                                            <p>수아 시그니처 퍼퓸<br>50ml</p>
-                                            </a>
                                         </div>
                                         <div class="product">
-                                            <a href="#">
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>SOIE. Signature</h2>
+                                                    <p>110,000 KRW</p>
+                                                </div>
+                                                <p>수아 시그니처 퍼퓸<br>50ml</p>
+                                            </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>Anise, Pink Grapefruit, Neroli</p>
+                                                <p>Rose, Jasmine, Lemongrass, Agarwood, Patchouli</p>
+                                            </div>
+                                        </div>
+                                        <div class="product">
+                                            <a href="#" class="pd">
                                                 <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
                                                 <div class="product_name">
                                                     <h2>NOLL.</h2>
@@ -115,44 +142,139 @@
                                                 </div>
                                                 <p>놀 퍼퓸<br>130ml</p>
                                             </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Lemon, Bergamot, Grapefruit, Coconut</p>
+                                                <p>M. Jasmine, Rose, Green-note, Tea tree, Eucalyptus</p>
+                                                <p>B. Amber, Musk</p>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="swiper-slide slide2">
                                         <div class="product">
-                                            <a href="#">
-                                                <div class="thumnail"><img src="./images/shop/img_shop003.jpg" alt=""></div>
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop004.jpg" alt=""></div>
                                                 <div class="product_name">
-                                                    <h2>NOLL.</h2>
+                                                    <h2>MUNAKI.</h2>
                                                     <p>55,000 KRW</p>
                                                 </div>
-                                                <p>놀 퍼퓸<br>130ml</p>
+                                                <p>무나키 퍼퓸<br>130ml</p>
                                             </a>
-                                        </div>
-                                        <div class="product">
-                                            <a href="#">
-                                            <div class="thumnail"><img src="./images/shop/img_shop002.jpg" alt=""></div>
-                                            <div class="product_name">
-                                                <h2>SOIE. Signature</h2>
-                                                <p>110,000 KRW</p>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Lemon, Orange, Coconut</p>
+                                                <p>M. Pink, Rose, Muguet, Nutmeg, Thyme, Green-note</p>
+                                                <p>B. Amber, Musk, Cedarwood, Sandalwood</p>
                                             </div>
-                                            <p>수아 시그니처 퍼퓸<br>50ml</p>
-                                            </a>
                                         </div>
                                         <div class="product">
-                                            <a href="#">
-                                                <div class="thumnail"><img src="./images/shop/img_shop001.jpg" alt=""></div>
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop005.jpg" alt=""></div>
                                                 <div class="product_name">
-                                                    <h2>AINOA.</h2>
+                                                    <h2>NUBE.</h2>
                                                     <p>55,000 KRW</p>
                                                 </div>
-                                                <p>아이노아 퍼퓸<br>130ml</p>
+                                                <p>누베 퍼퓸<br>130ml</p>
                                             </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Lemon, Apple, Peach</p>
+                                                <p>M. Muguet(Lily of the Valley), Jasmine, Rose, Green-note, Aqua-note</p>
+                                                <p>B. Musk, Amber, Cedarwood, Sandalwood, Vanilla</p>
+                                            </div>
+                                        </div>
+                                        <div class="product">
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop006.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>COCOCAY.</h2>
+                                                    <p>55,000 KRW</p>
+                                                </div>
+                                                <p>코코케이 퍼퓸<br>130ml</p>
+                                            </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Mango, Nectarine, Pear</p>
+                                                <p>M. Raspberry, Water lily, Lotus</p>
+                                                <p>B. Coconut, Musk, Sandalwood</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="swiper-slide slide3">
+                                        <div class="product">
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop007.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>EPEUL.</h2>
+                                                    <p>55,000 KRW</p>
+                                                </div>
+                                                <p>이플 퍼퓸<br>130ml</p>
+                                            </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Lemon, Marine</p>
+                                                <p>M. Magnolia, Jasmine, Muguet</p>
+                                                <p>B. Cedarwood, Musk, Sandalwood</p>
+                                            </div>
+                                        </div>
+                                        <div class="product">
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop008.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>MARINE ORCHID.</h2>
+                                                    <p>35,000 KRW</p>
+                                                </div>
+                                                <p>마인 오키드 멀티퍼퓸<br>100ml / 200ml</p>
+                                            </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Mandarin, Pear, Lemon</p>
+                                                <p>M. Rose, Lily of the Valley, Orchid</p>
+                                                <p>B. Musk, Toffee, Patchouli</p>
+                                            </div>
+                                        </div>
+                                        <div class="product">
+                                            <a href="#" class="pd">
+                                                <div class="thumnail"><img src="./images/shop/img_shop009.jpg" alt=""></div>
+                                                <div class="product_name">
+                                                    <h2>SUSIE SALMNON.</h2>
+                                                    <p>35,000 KRW</p>
+                                                </div>
+                                                <p>수지 살몬 멀티퍼퓸<br>100ml / 200ml</p>
+                                            </a>
+                                            <button type="button" class="perfume_note_btn">
+                                                <img src="./images/icon_perfumenote.png" alt="">
+                                                <span>Perfume Note</span>
+                                            </button>
+                                            <div class="perfume_note">
+                                                <p>T. Lemon, Black Currant, Tangerine, Cut Grass</p>
+                                                <p>M. Lily of the Valley, Jasmine, Rose, Freesia, Peach, Apricot, Apple</p>
+                                                <p>B. SandalWood, Cedar, Amber, White Musk</p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="swiper-scrollbar"></div>
+                                <div class="swiper-button-next"></div>
                             </div>
-                            <div class="swiper-button-next"></div>
                         </div>
                     </div>
                 </div>
@@ -170,7 +292,6 @@
                             매일의 배스타임을 하루 중 가장 즐거운<br>
                             휴식의 시간으로 만들어보세요.</p>
                     </div>
-                    
                 </div>
                 <div class="set_slide swiper">
                     <div class="swiper-button-prev"></div>
@@ -352,21 +473,21 @@
                             <a href="#" class="swiper-slide slide1">
                                 <h2>Marne.</h2>
                                 <h3>마르네</h3>
-                                <p class="perfume_note">Orange, Sage, Pine, Woody,
+                                <p class="perfume_note_btn">Orange, Sage, Pine, Woody,
                                     Patchouli, Musk, MosS</p>
                                 <p>도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선, 빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는 기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고 싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게 걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이 저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의 아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던 일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게 저려온다.</p>
                             </a>
                             <a href="#" class="swiper-slide slide2">
                                 <h2>Marne.</h2>
                                 <h3>마르네</h3>
-                                <p class="perfume_note">Orange, Sage, Pine, Woody,
+                                <p class="perfume_note_btn">Orange, Sage, Pine, Woody,
                                     Patchouli, Musk, MosS</p>
                                 <p>도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선, 빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는 기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고 싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게 걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이 저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의 아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던 일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게 저려온다.</p>
                             </a>
                             <a href="#" class="swiper-slide slide3">
                                 <h2>Marne.</h2>
                                 <h3>마르네</h3>
-                                <p class="perfume_note">Orange, Sage, Pine, Woody,
+                                <p class="perfume_note_btn">Orange, Sage, Pine, Woody,
                                     Patchouli, Musk, MosS</p>
                                 <p>도시와는 달리 낮은 건물들과 그 뒤로 완만하게 펼쳐진 능선, 빠르게 지나쳐 더 아쉬운 좁은 골목들, 차창 틈으로 들어오는 기분 좋은 낮선 공기. 해가 지기 전 이 풍경 속으로 녹아들고 싶은 마음에 속도로 향하던 차를 갓길에 세우고 느리게 걸어본다. 발길 닿는 곳으로 걷다 도착한 능원에는 사람들이 저마다의 방식으로 이 순간을 예찬하고 있다. 적당한 크기의 아름드리 소나무를 찾아 그 아래 자리를 잡는다. 바빴던 일상의 기억은 금세 흐려지고 바람이 닿는 살갗이 기분 좋게 저려온다.</p>
                             </a>
